feat: update template

--- a/notebooks/attack_template_election.ipynb
+++ b/notebooks/attack_template_election.ipynb
@@ -9,22 +9,22 @@
     "- GAOZの組みを全く変えていない場合に利用する\n",
     "  -> 多数決方式でせめる  \n",
     "\n",
-    "## 派生方式\n",
+    "### 派生方式\n",
     "\n",
-    "### election with ignorance  \n",
+    "#### election with ignorance  \n",
     "\n",
     "多数決をするが、候補が複数あり、合致しているものを採用する方式。  \n",
     "\n",
     "ただし、NaNの数が多くなるので、ハミング距離が必然的に小さくなり、一見良さそうに見えるのに注意\n",
     "\n",
-    "### wegihted election\n",
+    "#### wegihted election\n",
     "\n",
     "多数決をする際に、Reviewのカラムの長さが長い順に重みを大きくして、多数決を行う。\n",
     "\n",
     "MAEの性質上、カラム数が多い方が実際の値に全体的に近くなることが考えられるからである。\n",
     "\n",
     "### 担当者と日付\n",
-    "2024/10/2 渡邉健"
+    "2024/10/☆☆  WHO"
    ]
   },
   {
