--- a/notebooks/attack_template_random_forest.ipynb
+++ b/notebooks/attack_template_random_forest.ipynb
@@ -4,15 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5 SHA-NES\n",
+    "# ランダムフォレスト方式のテンプレート\n",
     "\n",
-    "- GAOZの組みを変えずにシャッフルを行っていない  \n",
-    "  -> 多数決方式は不可能\n",
+    "- GAOZの組みを変えていて、ランダムフォレストによる予測性能が高い時に利用する\n",
+    "  <- 多数決方式も一応確認はする。\n",
     "\n",
-    "- Random Forestによる識別率が0.78とかなり高く出てる\n",
+    "### 課題\n",
+    "\n",
+    "- 予測精度が全体的に上がっていないので、上がる手法があるかの検討\n",
+    "\n",
+    "- GAOZ -> Reviewの予測はできているが、本来MAEのペアの関係上、Review間での相関もあるはずで、それを本方式では考慮できていない\n",
     "\n",
     "### 担当者と日付\n",
-    "2024/10/1 渡邉健"
+    "2024/10/☆☆  WHO"
    ]
   },
   {
