feat: update anaume

--- a/sandbox/mae_attack_anaume.ipynb
+++ b/sandbox/mae_attack_anaume.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 952,
+   "execution_count": 1203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 953,
+   "execution_count": 1204,
    "metadata": {},
    "outputs": [
     {
@@ -23,13 +23,13 @@
        "'\\n01\\t宮地研.exe\\n02\\t私達日本語本当下手\\n03\\tポップコーン\\n04\\tHots\\n05\\tSHA-NES\\n06\\t神ぼ大νττ\\n07\\tたけのこ映画守り隊\\n08\\t0xA\\n09\\tステテコ泥棒\\n10\\t動的計画法\\n11\\tGunmataro117\\n12\\tHAL\\n14\\tprivocy\\n15\\tES5 →多数決で陥落？\\n16\\t佐古研究室\\n17\\tこそっとアタック、しれっとブロック\\n18\\t匿名アノニマス\\n19\\tRITCHEY\\n20\\tKAT-TUNE\\n21\\tPR.AVATECT\\n22\\t春日部防衛隊（かすかべ防衛隊）\\n'"
       ]
      },
-     "execution_count": 953,
+     "execution_count": 1204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ATTACK_TARGET = \"01\"\n",
+    "ATTACK_TARGET = \"02\"\n",
     "MAIN = False # True: メインの攻撃, False: 予備選の攻撃\n",
     "\n",
     "DIR = \"../data\" if MAIN else \"../predata/anonymization_data\"\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 954,
+   "execution_count": 1205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 955,
+   "execution_count": 1206,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "[10000 rows x 17 columns]"
       ]
      },
-     "execution_count": 955,
+     "execution_count": 1206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 956,
+   "execution_count": 1207,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        "4     Trever Yoell      M   56          16       280"
       ]
      },
-     "execution_count": 956,
+     "execution_count": 1207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 957,
+   "execution_count": 1208,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 957,
+     "execution_count": 1208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 958,
+   "execution_count": 1209,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "[('2', '56'), ('2', '260'), ('2', '653'), ('2', '673'), ('2', '810')]"
       ]
      },
-     "execution_count": 958,
+     "execution_count": 1209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 959,
+   "execution_count": 1210,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "5     0.0357  0.0175  0.0291  0.0282  0.0323  0.0251"
       ]
      },
-     "execution_count": 959,
+     "execution_count": 1210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 960,
+   "execution_count": 1211,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 961,
+   "execution_count": 1212,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 962,
+   "execution_count": 1213,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 962,
+     "execution_count": 1213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 963,
+   "execution_count": 1214,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "'3489'"
       ]
      },
-     "execution_count": 963,
+     "execution_count": 1214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 964,
+   "execution_count": 1215,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
        "[6 rows x 22 columns]"
       ]
      },
-     "execution_count": 964,
+     "execution_count": 1215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 965,
+   "execution_count": 1216,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
        "[6 rows x 22 columns]"
       ]
      },
-     "execution_count": 965,
+     "execution_count": 1216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1865,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 966,
+   "execution_count": 1217,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1881,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 966,
+     "execution_count": 1217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1894,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 967,
+   "execution_count": 1218,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1910,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 967,
+     "execution_count": 1218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 968,
+   "execution_count": 1219,
    "metadata": {},
    "outputs": [
     {
@@ -1938,7 +1938,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 968,
+     "execution_count": 1219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 969,
+   "execution_count": 1220,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1959,7 @@
        "4"
       ]
      },
-     "execution_count": 969,
+     "execution_count": 1220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 970,
+   "execution_count": 1221,
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
        "       3, 0, 0, 1, 0, 1])"
       ]
      },
-     "execution_count": 970,
+     "execution_count": 1221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2072,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 971,
+   "execution_count": 1222,
    "metadata": {},
    "outputs": [
     {
@@ -2119,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 972,
+   "execution_count": 1223,
    "metadata": {},
    "outputs": [
     {
@@ -2152,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 973,
+   "execution_count": 1224,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2163,7 @@
        "       3, 0, 0, 1, 0, 1])"
       ]
      },
-     "execution_count": 973,
+     "execution_count": 1224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2256,7 +2256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 974,
+   "execution_count": 1225,
    "metadata": {},
    "outputs": [
     {
@@ -2303,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 975,
+   "execution_count": 1226,
    "metadata": {},
    "outputs": [
     {
@@ -2329,10 +2329,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1227,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 2 2 5 4 0 2 0 0 0 3 3 0 1 5 1 2 4 0 2 0 0 0 2 2 0 4 0 5 0 5 0 0 5 0 4\n",
+      " 0 3 0 0 0 0 0 2 0 0 3 4 1]\n",
+      "[5, 3, 5, 3, 4, 0, 4, 0, 0, 0, 1, 1, 0, 0, 2, 0, 0, 0, 2, 0, 0, 1, 2, 0, 0, 0, 4, 0, 0, 0, 5, 3, 5, 0, 0, 2, 0, 3, 1, 0, 2, 0, 0, 0, 1, 0, 0, 1, 0, 0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "マッチングの成功率: <span style='color:yellow'>13</span> / 50"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# results_df[\"Predicted_Rating\"]\n",
+    "\n",
+    "from IPython.display import Markdown, display\n",
+    "import random\n",
+    "\n",
+    "def printmd(string):\n",
+    "    display(Markdown(string))\n",
+    "\n",
+    "my_answer = []\n",
+    "for _ in range(28):\n",
+    "    my_answer.append(0)\n",
+    "for _ in range(22):\n",
+    "    my_answer.append(random.choice([1, 2, 3, 4, 5]))\n",
+    "\n",
+    "np.random.shuffle(my_answer)\n",
+    "\n",
+    "if not MAIN:\n",
+    "    Bx = pd.read_csv(f\"{DIR}/B{ATTACK_TARGET}x.csv\", header=None)\n",
+    "    X_ANSWER = Bx[1].values\n",
+    "\n",
+    "    print(X_ANSWER)\n",
+    "    print(my_answer)\n",
+    "\n",
+    "    matched_count = sum([1 for i in range(50) if my_answer[i] == X_ANSWER[i]])\n",
+    "    printmd(f\"マッチングの成功率: <span style='color:yellow'>{matched_count}</span> / 50\")"
+   ]
   }
  ],
  "metadata": {
